--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -92,15 +92,22 @@ footer {
   padding: 2rem;
   text-align: center;
   text-decoration: none;
+  border: 2px solid blue;
 }
 
 footer .footer-content {
-  max-width: 1200px;
-  margin: 0 auto;
+  max-width: 900px;
+  margin: auto;
   display: flex;
   justify-content: space-evenly;
+  /* border: 2px solid green; */
 }
-
+.footer-logo-img{
+  width: 150px;
+  height: 150px;
+  border-radius: 2px;
+  padding-top: 20px;
+}
 footer p {
   font-size: 1rem;
   margin: 0.5rem 0;
@@ -129,7 +136,12 @@ footer p {
   font-weight: bold;
 }
 .footer-links li{
+  padding: 0;
+  margin: 0;
   padding-top: 5px;
+  padding-left: 28px;
+  list-style-type: none;
+  text-align: left;
 }
 .footer-links li a {
   color: #92a8d1
