--- a/src/app/page.css
+++ b/src/app/page.css
@@ -137,7 +137,7 @@ textarea {
   width: 100%;
   padding: 0.75rem;
   margin-bottom: 1rem;
-  border: 1px solid #ccc;
+  /* border: 1px solid #ccc; */
   border-radius: 8px;
   font-size: 1.2em;
   transition: border-color 0.3s ease;
@@ -152,7 +152,8 @@ textarea {
 
 input:focus,
 textarea:focus {
-  border-color: var(--dark-blue);
+  border-color: var(--white);
+  border-width: 3px;
   outline: none;
 }
 
